add now playing movie
